# military_to_civilian_resume_custom_gpt

./: .gitignore  README.md  agents.md
backend/: README.md  pyproject.toml
backend/app/: __init__.py  mcp_server.py
backend/app/data/: data_dictionary.yaml  guardrails.yaml  indicator_catalog.yaml  mnet_data.json  rank_responsibilities.yaml  translation_templates.yaml
backend/db/: schema.sql
backend/scripts/: ingest_mosid_noc.py  populate_db_from_json.py  scrape_mnet_mosids.py  scraper.py  update_mnet_data.py  verify_mosids.py
backend/tests/: conftest.py  test_http_api.py  test_mcp_server.py
data/processed/: mnet_data.json  mosid_noc.csv  mosid_noc.json
data/raw/: README.md  mnet_mosid_noc_2023.csv
docs/: Creator_bio.md  chatgpt_actions_configuration.md  chatgpt_actions_manifest.json  chatgpt_actions_openapi.yaml  gpt_instructions.md  mcp_api_spec.md  mprr_field_map.md  mprr_output_strategy.md  mprr_samples.md  privacy_guardrails.md  roadmap.md  target_resume_schema.yaml
docs/data_dictionary/: mosid_noc.md
docs/templates/: service_history_narratives.md
reports/: mosid_gap_analysis.md
